// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`imports default 1`] = `
"
code:

import a from \\"b\\";

exploded:

  exports: []
  imports:
    -
        external: 'default'
        kind: 'value'
        local: 'a'
        source: 'b'
  statements: []"
`;

exports[`imports default and named 1`] = `
"
code:

import a, {b} from \\"c\\";

exploded:

  exports: []
  imports:
    -
        external: 'default'
        kind: 'value'
        local: 'a'
        source: 'c'
    -
        external: 'b'
        kind: 'value'
        local: 'b'
        source: 'c'
  statements: []"
`;

exports[`imports effect 1`] = `
"
code:

import \\"c\\";

exploded:

  exports: []
  imports:
    -
        source: 'c'
  statements: []"
`;

exports[`imports import type 1`] = `
"
code:

import type a from \\"b\\";

exploded:

  exports: []
  imports:
    -
        external: 'default'
        kind: 'type'
        local: 'a'
        source: 'b'
  statements: []"
`;

exports[`imports import type inner 1`] = `
"
code:

import {type a} from \\"b\\";

exploded:

  exports: []
  imports:
    -
        external: 'a'
        kind: 'type'
        local: 'a'
        source: 'b'
  statements: []"
`;

exports[`imports import typeof 1`] = `
"
code:

import typeof a from \\"b\\";

exploded:

  exports: []
  imports:
    -
        external: 'default'
        kind: 'typeof'
        local: 'a'
        source: 'b'
  statements: []"
`;

exports[`imports import typeof inner 1`] = `
"
code:

import {typeof a} from \\"b\\";

exploded:

  exports: []
  imports:
    -
        external: 'a'
        kind: 'typeof'
        local: 'a'
        source: 'b'
  statements: []"
`;

exports[`imports import value/type/typeof inner 1`] = `
"
code:

import {a, type b, typeof c} from \\"b\\";

exploded:

  exports: []
  imports:
    -
        external: 'a'
        kind: 'value'
        local: 'a'
        source: 'b'
    -
        external: 'b'
        kind: 'type'
        local: 'b'
        source: 'b'
    -
        external: 'c'
        kind: 'typeof'
        local: 'c'
        source: 'b'
  statements: []"
`;

exports[`imports named 1`] = `
"
code:

import {a} from \\"b\\";

exploded:

  exports: []
  imports:
    -
        external: 'a'
        kind: 'value'
        local: 'a'
        source: 'b'
  statements: []"
`;

exports[`imports named renamed 1`] = `
"
code:

import {a as b} from \\"c\\";

exploded:

  exports: []
  imports:
    -
        external: 'a'
        kind: 'value'
        local: 'b'
        source: 'c'
  statements: []"
`;

exports[`imports namespace 1`] = `
"
code:

import * as a from \\"b\\";

exploded:

  exports: []
  imports:
    -
        kind: 'value'
        local: 'a'
        source: 'b'
  statements: []"
`;
